Fix some gaps

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -360,10 +360,6 @@ button {
   font-size: 1rem;
 }
 
-button + button {
-  margin-left: 0.5rem;
-}
-
 button.secondary {
   color: var(--color-background);
   background: var(--color-text-dim);
